--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,15 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
+             <plugin>
+                <artifactId>maven-resource-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+                 </plugin>  
+                <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19</version>
                 <dependencies>
